--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <header class="content-section content-section_theme_dark header">
           <img class="logo"
           src="./images/logo.svg"
-          width="78.453";
-          height="15.432";
+          width="78.45"
+          height="15.43"
           alt="Логотип: vёrstka">
         </header>
         <main>
@@ -22,7 +22,7 @@
             </section>
             <section class="content-section content-section_theme_dark intro">
                 <div class="intro-title">8 способов борьбы со страхом чистого листа</div>
-                <div class=""intro-text">Начинать что-то новое — тяжело и страшно. Даже если это просто небольшой фрагмент кода. Или текст. Например, прежде чем написать здесь что-то вразумительное, автор(ка) этого материала заварила чай, позвонила бабушке узнать, как поживают на даче огурцы с помидорами (окей, это правда важно), 10 минут ходила туда-сюда по комнате, протёрла пыль на столе и заварила чай ещё раз, потому что он остыл. Всё это время с монитора на неё смотрел чистый лист. Прокрастинировать перед тем, как начать что-то делать (особенно что-то новое) — нормальная реакция мозга. Разберёмся, почему это происходит.</div>
+                <div class="intro-text">Начинать что-то новое — тяжело и страшно. Даже если это просто небольшой фрагмент кода. Или текст. Например, прежде чем написать здесь что-то вразумительное, автор(ка) этого материала заварила чай, позвонила бабушке узнать, как поживают на даче огурцы с помидорами (окей, это правда важно), 10 минут ходила туда-сюда по комнате, протёрла пыль на столе и заварила чай ещё раз, потому что он остыл. Всё это время с монитора на неё смотрел чистый лист. Прокрастинировать перед тем, как начать что-то делать (особенно что-то новое) — нормальная реакция мозга. Разберёмся, почему это происходит.</div>
             </section>
             <section class="content-section content-section_theme_bright reasons">
                 <h2 class="h2_dark_right">Почему чистый лист</h2></section>
@@ -30,16 +30,16 @@
                 <div class="reasons-text">Сам по себе чистый лист, конечно, не страшный. Боимся мы чаще всего объёма работы, которую предстоит сделать. Усилия, той точки, которую нужно преодолеть, чтобы переключить мозг из состояния паники в состояние потока. Причин, почему первые усилия даются так сложно, может быть очень много. Вот основные:</div>
                 <ul class="reasons-list">
                   <li class="reasons-list">
-                    <div class="mini_title">Неуверенность в результате.</div>И в том, что его вообще можно достичь. Ведь как можно быть уверенным, что проводишь всю работу не впустую? Что доведёшь дело до конца? А тут, пока не начал, не надо и заканчивать.</div
+                    <div class="mini_title">Неуверенность в результате.</div>И в том, что его вообще можно достичь. Ведь как можно быть уверенным, что проводишь всю работу не впустую? Что доведёшь дело до конца? А тут, пока не начал, не надо и заканчивать.
                   </li>
                   <li>
-                    <div class="mini_title">Страх критики.</div>Если работу будет кто-то оценивать, то уже на самых ранних этапах мы смотрим на неё глазами этого человека. Представляем, какие недостатки в ней можно найти. После этого желание что-то делать сразу пропадает.</div
+                    <div class="mini_title">Страх критики.</div>Если работу будет кто-то оценивать, то уже на самых ранних этапах мы смотрим на неё глазами этого человека. Представляем, какие недостатки в ней можно найти. После этого желание что-то делать сразу пропадает.
                   </li>
                   <li>
-                    <div class="mini_title">Перфекционизм.</div>Как долгосрочной, так и краткосрочной. Например, если дедлайн только через неделю, можно посидеть пару часов, рассматривая узоры на обоях, — времени ещё вагон. Или прогуливать уроки химии в школе, потому что вроде как и хочется стать нейрохирургом, но в кино на «Мстителей» хочется ещё больше.</div
+                    <div class="mini_title">Перфекционизм.</div>Как долгосрочной, так и краткосрочной. Например, если дедлайн только через неделю, можно посидеть пару часов, рассматривая узоры на обоях, — времени ещё вагон. Или прогуливать уроки химии в школе, потому что вроде как и хочется стать нейрохирургом, но в кино на «Мстителей» хочется ещё больше.
                   </li>
                   <li>
-                    <div class="mini_title">Недостаток информации.</div>Начинать что-то особенно сложно, если вы новичок в теме и только разбираетесь, что к чему. Вам может казаться, что каждая строчка — глупость, и вообще всё, что вы сделаете, — будет неправильно.</div
+                    <div class="mini_title">Недостаток информации.</div>Начинать что-то особенно сложно, если вы новичок в теме и только разбираетесь, что к чему. Вам может казаться, что каждая строчка — глупость, и вообще всё, что вы сделаете, — будет неправильно.
                   </li>
                 </ul>
             </section>
@@ -65,7 +65,7 @@
                   <div class="author">Иван Бунин</div>
                   <h3 class="h3_white">Сдалать из задачи рутину</h3>
                 <div class="how-to_text_white_mini"
-                  <q>«Писать стихи нужно каждый день, подобно тому как скрипач или пианист непременно должен каждый день без пропусков по нескольку часов играть на своём инструменте. В противном случае ваш талант неизбежно оскудеет, высохнет, подобно колодцу, откуда долгое время не берут воду. А о чём писать? О чём угодно. Если у вас в данное время нет никакой темы, идеи, то пишите просто обо всём, что увидите»,</q> — такой совет своему приятелю дал Иван Бунин. Нет повода ему не следовать.
+                  <q>«Писать стихи нужно каждый день, подобно тому как скрипач или пианист непременно должен каждый день без пропусков по нескольку часов играть на своём инструменте. В противном случае ваш талант неизбежно оскудеет, высохнет, подобно колодцу, откуда долгое время не берут воду. А о чём писать? О чём угодно. Если у вас в данное время нет никакой темы, идеи, то пишите просто обо всём, что увидите», — </q>такой совет своему приятелю дал Иван Бунин. Нет повода ему не следовать.
                 </div>
             </section>
           </main>
