Проект "С чистого листа". Автотест. Исправлено

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </a>
       <nav class="header__menu">
         <ul class="header__menu-list">
-          <il class="header__menu-item_active">Главная</il>
-          <il class="header__menu-item">О нас</il>
-          <il class="header__menu-item">Контакты</il>
+          <li class="header__menu-item_active">Главная</li>
+          <li class="header__menu-item">О нас</li>
+          <li class="header__menu-item">Контакты</li>
         </ul>
       </nav>
     </header>
@@ -108,7 +108,8 @@
         <ul class="cards-list">
           <li class="card card_theme_dark">
             <section class="card__author">
-              <img class="card__author-foto"
+              <img
+                class="card__author-foto"
                 src="./images/polyarinov.png"
                 width="100"
                 height="100"
@@ -119,31 +120,34 @@
             <section class="card__content">
               <h3 class="card__title">Начать любыми словами</h3>
               <p class="card__text">
-                Любыми — без шуток. Если не верите нам, посмотрите, например, чем
-                открывается эссе Алексея Поляринова «Чарли Кауфман: расширение
-                пространства». Можно и менее радикально. Главное, чтобы пустую
-                страницу начали заполнять символы. Получится своеобразная ловушка
-                для мозга: он видит, что вы уже начали что-то делать, и ему
-                становится легче войти в состояние потока.
+                Любыми — без шуток. Если не верите нам, посмотрите, например,
+                чем открывается эссе Алексея Поляринова «Чарли Кауфман:
+                расширение пространства». Можно и менее радикально. Главное,
+                чтобы пустую страницу начали заполнять символы. Получится
+                своеобразная ловушка для мозга: он видит, что вы уже начали
+                что-то делать, и ему становится легче войти в состояние потока.
               </p>
             </section>
           </li>
           <li class="card card_theme_bright card_text-only">
             <section class="card__content">
-              <h3 class="card__title">Поставить перед собой рамку для фотографии</h3>
+              <h3 class="card__title">
+                Поставить перед собой рамку для фотографии
+              </h3>
               <p class="card__text">
                 Самую обычную: 10 на 15 сантиметров. Уже от одного ощущения, что
                 предстоит работа над большой и сложной задачей, может пропасть
                 всякое желание за неё браться. В такие моменты хорошо помогает
-                загнать задачу в рамки — в прямом смысле. Сосредоточьтесь на том,
-                чтобы заполнить только пространство 10х15 сантиметров. Что дальше —
-                пока неважно.
+                загнать задачу в рамки — в прямом смысле. Сосредоточьтесь на
+                том, чтобы заполнить только пространство 10х15 сантиметров. Что
+                дальше — пока неважно.
               </p>
             </section>
           </li>
           <li class="card card_theme_dark">
             <section class="card__author">
-              <img class="card__author-foto"
+              <img
+                class="card__author-foto"
                 src="./images/bunin.png"
                 width="100"
                 height="100"
@@ -154,20 +158,18 @@
             <section class="card__content">
               <h3 class="card__title">Сдалать из задачи рутину</h3>
               <p class="card__text">
-                Писать стихи нужно каждый день, подобно тому как скрипач или
-              пианист непременно должен каждый день без пропусков по нескольку
-              часов играть на своём инструменте. В противном случае ваш талант
-              неизбежно оскудеет, высохнет, подобно колодцу, откуда долгое время
-              не берут воду. А о чём писать? О чём угодно. Если у вас в данное
-              время нет никакой темы, идеи, то пишите просто обо всём, что
-              увидите
-            </q>
-            — такой совет своему приятелю дал Иван Бунин. Нет повода ему не
-            следовать.
+                <q>Писать стихи нужно каждый день, подобно тому как скрипач или
+                  пианист непременно должен каждый день без пропусков по
+                  нескольку часов играть на своём инструменте. В противном
+                  случае ваш талант неизбежно оскудеет, высохнет, подобно
+                  колодцу, откуда долгое время не берут воду. А о чём писать? О
+                  чём угодно. Если у вас в данное время нет никакой темы, идеи,
+                  то пишите просто обо всём, что увидите</q>, — такой совет своему приятелю дал Иван Бунин. Нет повода ему не
+                следовать.
               </p>
             </section>
           </li>
-        </ul>        
+        </ul>
       </section>
     </main>
     <footer class="content-section content-section_theme_dark footer">
