--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           alt="Логотип: vёrstka"
         />
       </a>
+<!--Добавил общую сущность header__menu-item на случай если активная ссылка сменится-->
       <nav class="header__menu">
         <ul class="header__menu-list">
           <li class="header__menu-item header__menu-item_active">
@@ -37,6 +38,7 @@
           <span class="accent-span text-right">листа</span>
         </h1>
       </section>
+<!--тег section заменен на тег article-->
       <article class="content-section content-section_theme_dark intro">
         <header class="intro__heading">
           <p class="intro__title">8 способов борьбы со страхом чистого листа</p>
@@ -56,6 +58,7 @@
           новое) — нормальная реакция мозга. Разберёмся, почему это происходит.
         </p>
       </article>
+<!--тег section заменен на тег article-->
       <article class="content-section content-section_theme_bright reasons">
         <h2 class="content-section__subtitle">
           <span class="accent-span text-right">Почему чистый лист</span>
@@ -113,6 +116,7 @@
         </p>
         <ul class="cards-list">
           <li class="card card_theme_dark">
+<!-- section заменено на div -->
             <div class="card__author">
               <img
                 class="card__author-foto"
@@ -123,6 +127,7 @@
               />
               <p class="card__author-name">Алексей Поляринов</p>
             </div>
+<!-- section заменено на div -->
             <div class="card__content">
               <h3 class="card__title">Начать любыми словами</h3>
               <p class="card__text">
@@ -136,6 +141,7 @@
             </div>
           </li>
           <li class="card card_theme_bright card_text-only">
+<!-- section заменено на div -->
             <div class="card__content">
               <h3 class="card__title">
                 Поставить перед собой рамку для фотографии
@@ -151,6 +157,7 @@
             </div>
           </li>
           <li class="card card_theme_dark">
+<!-- section заменено на div -->
             <div class="card__author">
               <img
                 class="card__author-foto"
@@ -161,6 +168,7 @@
               />
               <p class="card__author-name">Иван Бунин</p>
             </div>
+<!-- section заменено на div -->
             <div class="card__content">
               <h3 class="card__title">Сдалать из задачи рутину</h3>
               <p class="card__text">
@@ -179,8 +187,10 @@
       </section>
     </main>
     <footer class="content-section content-section_theme_dark footer">
+<!-- div заменен на p-->
       <p class="footer__copy">© VЁRSTKA</p>
       <nav>
+<!--Элементы сделаны ссылками-->
         <ul class="footer__links">
           <li>
             <a class="footer__links-social-networks" href="https://vk.ru">VK</a>
