--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           alt="Логотип: vёrstka"
         />
       </a>
-<!--Добавил общую сущность header__menu-item на случай если активная ссылка сменится-->
+      <!--Добавил общую сущность header__menu-item на случай если активная ссылка сменится-->
       <nav class="header__menu">
         <ul class="header__menu-list">
           <li class="header__menu-item header__menu-item_active">
@@ -38,7 +38,7 @@
           <span class="accent-span text-right">листа</span>
         </h1>
       </section>
-<!--тег section заменен на тег article-->
+      <!--тег section заменен на тег article-->
       <article class="content-section content-section_theme_dark intro">
         <header class="intro__heading">
           <p class="intro__title">8 способов борьбы со страхом чистого листа</p>
@@ -58,11 +58,11 @@
           новое) — нормальная реакция мозга. Разберёмся, почему это происходит.
         </p>
       </article>
-<!--тег section заменен на тег article-->
+      <!--тег section заменен на тег article-->
       <article class="content-section content-section_theme_bright reasons">
         <h2 class="content-section__subtitle">
           <span class="accent-span text-right">Почему чистый лист</span>
-          <span class="accent-span text-left">- такой страшный?</span>
+          <span class="accent-span text-left">— такой cтрашный?</span>
         </h2>
         <p class="content-section__introduction">
           Сам по себе чистый лист, конечно, не страшный. Боимся мы чаще всего
@@ -88,17 +88,21 @@
             сразу пропадает.
           </li>
           <li class="content-section__list-item">
-            <span class="content-section__list-accent">Перфекционизм.</span> Как
-            долгосрочной, так и краткосрочной. Например, если дедлайн только
+            <span class="content-section__list-accent">Перфекционизм.</span>
+            Когда кажется, что работа не будет сделана идеально, будто бы нет
+            смысла её и начинать. В такие моменты мы можем забыть, что с первого
+            раза что-то получается довольно редко.
+          </li>
+          <li class="content-section__list-item">
+            <span class="content-section__list-accent"
+              >Отсутствие мотивации.</span>Как долгосрочной, так и краткосрочной. Например, если дедлайн только
             через неделю, можно посидеть пару часов, рассматривая узоры на
             обоях, — времени ещё вагон. Или прогуливать уроки химии в школе,
             потому что вроде как и хочется стать нейрохирургом, но в кино на
             «Мстителей» хочется ещё больше.
           </li>
           <li class="content-section__list-item">
-            <span class="content-section__list-accent"
-              >Недостаток информации.</span
-            >
+            <span class="content-section__list-accent">Недостаток информации.</span>
             Начинать что-то особенно сложно, если вы новичок в теме и только
             разбираетесь, что к чему. Вам может казаться, что каждая строчка —
             глупость, и вообще всё, что вы сделаете, — будет неправильно.
@@ -115,85 +119,109 @@
           из-за совокупности нескольких факторов. Вот что может помочь:
         </p>
         <ul class="cards-list">
-          <li class="card card_theme_dark">
-<!-- section заменено на div -->
-            <div class="card__author">
-              <img
-                class="card__author-foto"
-                src="./images/polyarinov.png"
-                width="100"
-                height="100"
-                alt="Фотография Алексея Поляринова"
-              />
-              <p class="card__author-name">Алексей Поляринов</p>
-            </div>
-<!-- section заменено на div -->
-            <div class="card__content">
-              <h3 class="card__title">Начать любыми словами</h3>
-              <p class="card__text">
-                Любыми — без шуток. Если не верите нам, посмотрите, например,
-                чем открывается эссе Алексея Поляринова «Чарли Кауфман:
-                расширение пространства». Можно и менее радикально. Главное,
-                чтобы пустую страницу начали заполнять символы. Получится
-                своеобразная ловушка для мозга: он видит, что вы уже начали
-                что-то делать, и ему становится легче войти в состояние потока.
-              </p>
-            </div>
+          <li class="cards-list-item">
+            <!--каждая отдельная карточка с тегом <article>-->
+            <article class="card card_theme_dark">
+              <!-- section заменено на div -->
+              <div class="card__author">
+                <img
+                  class="card__author-foto"
+                  src="./images/polyarinov.png"
+                  width="100"
+                  height="100"
+                  alt="Фотография Алексея Поляринова"
+                />
+                <p class="card__author-name">Алексей Поляринов</p>
+              </div>
+              <!-- section заменено на div -->
+              <div class="card__content">
+                <h3 class="card__title">Начать любыми словами</h3>
+                <p class="card__text">
+                  Любыми — без шуток. Если не
+                  верите нам, посмотрите, например,
+                  чем открывается эссе
+                  Алексея Поляринова «Чарли
+                  Кауфман: расширение
+                  пространства». Можно и менее
+                  радикально. Главное, чтобы
+                  пустую страницу начали
+                  заполнять символы. Получится
+                  своеобразная ловушка для мозга:
+                  он видит, что вы уже начали что-то
+                  делать, и ему становится легче
+                  войти в состояние потока.
+                </p>
+              </div>
+            </article>
           </li>
-          <li class="card card_theme_bright card_text-only">
-<!-- section заменено на div -->
-            <div class="card__content">
-              <h3 class="card__title">
-                Поставить перед собой рамку для фотографии
-              </h3>
-              <p class="card__text">
-                Самую обычную: 10 на 15 сантиметров. Уже от одного ощущения, что
-                предстоит работа над большой и сложной задачей, может пропасть
-                всякое желание за неё браться. В такие моменты хорошо помогает
-                загнать задачу в рамки — в прямом смысле. Сосредоточьтесь на
-                том, чтобы заполнить только пространство 10х15 сантиметров. Что
-                дальше — пока неважно.
-              </p>
-            </div>
+          <li class="cards-list-item">
+            <!--каждая отдельная карточка с тегом <article>-->
+            <article class="card card_theme_bright card_text-only">
+              <!-- section заменено на div -->
+              <div class="card__content">
+                <h3 class="card__title">
+                  Поставить перед собой рамку для фотографии
+                </h3>
+                <p class="card__text">
+                  Самую обычную: 10 на 15
+                  сантиметров. Уже от одного
+                  ощущения,что предстоит работа
+                  над большой и сложной задачей,
+                  может пропасть всякое желание
+                  за неё браться. В такие моменты
+                  хорошо помогает загнать задачу в
+                  рамки — в прямом смысле.
+                  Сосредоточьтесь на том, чтобы
+                  заполнить только пространство
+                  10х15 сантиметров. Что дальше —
+                  пока неважно.
+                </p>
+              </div>
+            </article>
           </li>
-          <li class="card card_theme_dark">
-<!-- section заменено на div -->
-            <div class="card__author">
-              <img
-                class="card__author-foto"
-                src="./images/bunin.png"
-                width="100"
-                height="100"
-                alt="Фотография Ивана Бунина"
-              />
-              <p class="card__author-name">Иван Бунин</p>
-            </div>
-<!-- section заменено на div -->
-            <div class="card__content">
-              <h3 class="card__title">Сдалать из задачи рутину</h3>
-              <p class="card__text">
-                <q>Писать стихи нужно каждый день, подобно тому как скрипач или
-                  пианист непременно должен каждый день без пропусков по
-                  нескольку часов играть на своём инструменте. В противном
-                  случае ваш талант неизбежно оскудеет, высохнет, подобно
-                  колодцу, откуда долгое время не берут воду. А о чём писать? О
-                  чём угодно. Если у вас в данное время нет никакой темы, идеи,
-                  то пишите просто обо всём, что увидите</q>, — такой совет своему приятелю дал Иван Бунин. Нет повода ему не
-                следовать.
-              </p>
-            </div>
+          <li class="cards-list-item">
+            <!--каждая отдельная карточка с тегом <article>-->
+            <article class="card card_theme_dark">
+              <!-- section заменено на div -->
+              <div class="card__author">
+                <img
+                  class="card__author-foto"
+                  src="./images/bunin.png"
+                  width="100"
+                  height="100"
+                  alt="Фотография Ивана Бунина"
+                />
+                <p class="card__author-name">Иван Бунин</p>
+              </div>
+              <!-- section заменено на div -->
+              <div class="card__content">
+                <h3 class="card__title">Сдалать из задачи рутину</h3>
+                <p class="card__text">
+                  <q
+                    >Писать стихи нужно каждый день, подобно тому как скрипач
+                    или пианист непременно должен каждый день без пропусков по
+                    нескольку часов играть на своём инструменте. В противном
+                    случае ваш талант неизбежно оскудеет, высохнет, подобно
+                    колодцу, откуда долгое время не берут воду. А о чём писать?
+                    О чём угодно. Если у вас в данное время нет никакой темы,
+                    идеи, то пишите просто обо всём, что увидите</q
+                  >, — такой совет своему приятелю дал Иван Бунин. Нет повода
+                  ему не следовать.
+                </p>
+              </div>
+            </article>
           </li>
         </ul>
       </section>
     </main>
     <footer class="content-section content-section_theme_dark footer">
-<!-- div заменен на p-->
+      <!-- div заменен на p-->
       <p class="footer__copy">© VЁRSTKA</p>
       <nav>
-<!--Элементы сделаны ссылками-->
+        <!--Элементы сделаны ссылками-->
         <ul class="footer__links">
           <li>
-            <a class="footer__links-social-networks" href="https://vk.ru">VK</a>
+            <a class="footer__links-social-networks" href="https://vk.ru">ВК</a>
           </li>
           <li>
             <a class="footer__links-social-networks" href="https://www.youtube.com/">Ютуб</a>
